JQuery-hoverIntent r7~core2

	* Just a minor upgrade path fix.
	-- Charlie Powell <charlie@eval.bz>  Mon, 15 Apr 2013 15:29:56 -0400
