@@ -1,3 +1,8 @@
+JQuery-hoverIntent r7~core3
+
+	* Make use of the namespace versions of View instead of static.
+	-- Charlie Powell <charlie@eval.bz>  Sat, 31 Aug 2013 17:38:32 -0400
+
 JQuery-hoverIntent r7~core2
 
 	* Just a minor upgrade path fix.
